# auth_system

./: .env  Cargo.toml  sqlx-data.json  todo.md
src/: db.rs  email_sender.rs  error.rs  main.rs  smsprovider.rs
src/api/: login.rs  mod.rs  register.rs  send_email_code.rs  sendsmscode.rs
src/auth/: register.rs
src/db/: email_codes.rs  smscodes.rs  user.rs
src/db/migrations/: 20230509140414_create_users.sql  20230509140540_create_email_codes.sql
src/test/: helper.rs
src/utils/: hash.rs  mod.rs  random.rs  validators.rs
