[package]
name = "auth_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.70"
chrono = "0.4.24"
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
sha2 = "0.10.6"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-actix-native-tls"] }
thiserror = "1.0.40"
